# Data-lysis

./: .gitignore  .replit  DATALYSIS_ADVANCED_FEATURES_IMPLEMENTATION.md  DATALYSIS_ENHANCEMENT_IMPLEMENTATION.md  DATA_CLEANING_GUIDE.md  EDA_SYSTEM_GUIDE.md  README.md  deploy.sh  fallback_section.txt  index.html  jest.config.js  nginx.conf  package-lock.json  package.json  pyproject.toml  start-server.bat  tsconfig.server.json  vite.config.ts
attached_assets/: Pasted--1-Import-LangChain-components-from-langchain-chat-models-import-ChatOpenAI-from-langchain-promp-1745680137558.txt  Pasted--1-Import-LangChain-components-from-langchain-chat-models-import-ChatOpenAI-from-langchain-promp-1745680152178.txt  Pasted--Goal-After-insights-are-extracted-generate-smart-domain-specific-visualizations-automatically--1745680274321.txt  Pasted-Awesome-here-s-how-to-wrap-the-domain-detection-prompt-into-a-LangChain-agent-template-usi-1745540918134.txt  Pasted-Great-question-If-you-want-Cursor-the-AI-powered-coding-assistant-to-build-this-entire-app--1745368758841.txt  Pasted-and-also-the-below-section-Create-a-LangChain-LLMChain-that-Takes-column-names-and-optional-s-1745541390565.txt
python_backend/: __init__.py  app.py  data_processor.py  domain_detection.py  domain_router.py  eda_engine.py  eda_methods.py  enhanced_data_cleaner.py  example_generator.py  query_analyzer.py  specialized_eda.py  test_domain_system.py  test_food_domain.py  visualization_generator.py
server/: advancedAIInsights.ts  aiAgents.ts  anthropic.ts  apiIntegration.ts  auditTrail.ts  cloudStorageConnector.ts  (+21 more)
(+91 files in other folders)
